# Arduino-Simulator-Qt6

./: .gitignore  CMakeLists.txt  README.md  arduino_simulator_qt_6_project.cpp  main.cpp  mainwindow.cpp
app/: mainwindow.cpp  mainwindow.h
complier/: buildresult.h  compilerservice.cpp  compilerservice.h  compilerworker.cpp  compilerworker.h
core/: logger.cpp  logger.h  thememanager.cpp  thememanager.h
gui/: mainwindow.cpp  mainwindow.h
resources/: simulator.qrc
scene/: PinPositions.cpp  PinPositions.h  ThemedScene.h  arduinoboarditem.cpp  arduinoboarditem.h  buttonitem.cpp  buttonitem.h  componentwire.cpp  componentwire.h  connectionitem.cpp  connectionitem.h  leditem.cpp  leditem.h  resistoritem.cpp  resistoritem.h
sim/: Action.h  boardmodel.cpp  boardmodel.h  parser.cpp  parser.h  pin.cpp  pin.h  runtime.cpp  runtime.h  sketchinterpreter.cpp  sketchinterpreter.h
ui/: arduinohighlighter.cpp  arduinohighlighter.h  editorpane.cpp  editorpane.h  editortextedit.cpp  editortextedit.h  linenumberarea.cpp  linenumberarea.h  outputpane.cpp  outputpane.h  simulatorpane.cpp  simulatorpane.h
